fixing unit-tests